<?xml version="1.0" encoding="utf-8"?><!--
  ~ fragment_chips.xml
  ~
  ~ Created by kimberlysweeney on 07-22-2022.
  ~
  ~ Copyright (C) 2022 Acoustic, L.P. All rights reserved.
  ~
  ~ NOTICE: This file contains material that is confidential and proprietary to
  ~ Acoustic, L.P. and/or other developers. No license is granted under any intellectual or
  ~ industrial property rights of Acoustic, L.P. except as may be provided in an agreement with
  ~ Acoustic, L.P. Any unauthorized copying or distribution of content from this file is
  ~ prohibited.
  -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chips_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/chips_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/chips_title"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chips_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/chips_input_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_title" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_input_title">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_1"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chip_input_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_2"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_input_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_input_3"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_input_3" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/chips_choice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/chips_choice_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_input" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:singleSelection="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_choice_title">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_choice_1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_choice_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_choice_2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_choice_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_choice_3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_choice_3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_choice_4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_choice_4" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/chips_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/chips_filter_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_choice" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_filter_title">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_1"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_filter_1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_2"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chip_filter_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_3"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_filter_3" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_4"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_filter_4" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/chips_action_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/chips_action_title"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_filter" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_action_title">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_action_1"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_action_1"
                app:chipIcon="@drawable/ic_baseline_share_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_action_2"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_action_2"
                app:chipIcon="@drawable/ic_baseline_favorite_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_action_3"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_action_3"
                app:chipIcon="@drawable/ic_baseline_cloud_download_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_action_4"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_action_4"
                app:chipIcon="@drawable/ic_baseline_alarm_24" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


