<?xml version="1.0" encoding="utf-8"?><!--
  ~ fragment_chips.xml
  ~
  ~ Created by kimberlysweeney on 07-22-2022.
  ~
  ~ Copyright (C) 2022 Acoustic, L.P. All rights reserved.
  ~
  ~ NOTICE: This file contains material that is confidential and proprietary to
  ~ Acoustic, L.P. and/or other developers. No license is granted under any intellectual or
  ~ industrial property rights of Acoustic, L.P. except as may be provided in an agreement with
  ~ Acoustic, L.P. Any unauthorized copying or distribution of content from this file is
  ~ prohibited.
  -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table_layout_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/table_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/table_layout_title"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_layout_title">

            <TableRow
                android:background="@color/teal_200"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_row_heading_column_1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_row_heading_column_2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_row_heading_column_3"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:background="@color/light_background"
                android:padding="10dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:contentDescription="@string/table_layout_item_1"
                    android:src="@drawable/thumbnail_trail_blazer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="10dp"
                    android:text="@string/table_layout_item_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_row_brand_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_price_1" />
            </TableRow>

            <TableRow
                android:background="@color/light_background"
                android:padding="10dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:contentDescription="@string/table_layout_item_2"
                    android:src="@drawable/thumbnail_reality" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_item_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_brand_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_price_2" />
            </TableRow>

            <TableRow
                android:background="@color/light_background"
                android:padding="10dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:contentDescription="@string/table_layout_item_3"
                    android:src="@drawable/thumbnail_hussle_usa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_item_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_brand_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_price_3" />

            </TableRow>

            <TableRow
                android:background="@color/light_background"
                android:padding="10dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:contentDescription="@string/table_layout_item_4"
                    android:src="@drawable/thumbnail_stars_stripes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_item_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_brand_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/table_layout_price_4" />

            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


